# todoapp

backend/: .env  Cargo.toml  todos.db  todos.json
backend/migrations/: 20231215145237_todos.sql
backend/src/: main.rs
backend/src/endpoints/: todos.rs
frontend/: package.json
